--- a/Animated Login Form using HTML CSS/styles.css
+++ b/Animated Login Form using HTML CSS/styles.css
@@ -22,7 +22,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: black;
+  background-color: #2c3333;
   color: white;
   width: 25rem;
   border-radius: 10px;
@@ -118,7 +118,7 @@ body {
 
 .loginBtn {
   background: transparent;
-  border: 2px solid green;
+  border: 2px solid #03c988;
   padding: 1rem 3rem;
   border-radius: 6rem;
   text-decoration: underline;
@@ -129,6 +129,6 @@ body {
 }
 
 .loginBtn:hover {
-  background: green;
-  border: 2px solid green;
+  background: #03c988;
+  border: 2px solid #3a98b9;
 }
