--- a/User Profile Card using HTML CSS and JavaScript/styles.css
+++ b/User Profile Card using HTML CSS and JavaScript/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .card-container {
-  background-color: rgb(31, 31, 32);
+  background-color: #2c3333;
   color: white;
   padding: 2rem;
   width: 20rem;
