merubah warna button

--- a/Login Form using HTML and CSS/styles.css
+++ b/Login Form using HTML and CSS/styles.css
@@ -148,7 +148,7 @@ input:focus {
   border-radius: 0.8rem;
   cursor: pointer;
   padding: 0.7rem 0.8rem;
-  background: linear-gradient(to right, #8d68c5, #e34494);
+  background: linear-gradient(to right, #8b1874, #fc4f00);
   margin-top: 2rem;
   margin-bottom: 3rem;
   color: #fff;
