--- a/Sidebar Menu using HTML and CSS/styles.css
+++ b/Sidebar Menu using HTML and CSS/styles.css
@@ -11,11 +11,11 @@
 .main-container {
   width: 100%;
   height: 100vh;
-  background-color: purple;
+  background-color: #c88ea7;
 }
 
 .left-menu {
-  background: white;
+  background: #fff9de;
   position: relative;
   width: 4.5rem;
   height: 100vh;
