--- a/Responsive Footer Design using HTML and CSS/styles.css
+++ b/Responsive Footer Design using HTML and CSS/styles.css
@@ -12,11 +12,11 @@
 .footer-section {
   width: 100%;
   display: flex;
-  color: white;
+  color: #f8f1f1;
   justify-content: space-around;
   flex-wrap: wrap;
   padding: 1rem 0;
-  background-color: rgb(32, 30, 30);
+  background-color: #025464;
 }
 
 .footer-section h2 {
@@ -28,7 +28,7 @@
   content: '';
   width: 4rem;
   height: 0.2rem;
-  background: #e65b00;
+  background: #e57c23;
   position: absolute;
   top: 2.5rem;
   left: 0;
@@ -51,7 +51,7 @@ a {
 }
 
 .footer-section a:hover {
-  color: #f46d13;
+  color: #e8aa42;
 }
 
 .footer-item {
@@ -75,7 +75,7 @@ a {
 }
 
 .social ul li:hover {
-  color: #e65b00;
+  color: #e57c23;
   transform: scale(1.1);
   transition: all 0.2s linear;
 }
