--- a/Responsive Social Media Card using HTML and CSS/styles.css
+++ b/Responsive Social Media Card using HTML and CSS/styles.css
@@ -19,6 +19,21 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+  background-size: 180% 180%;
+  animation: gradient-animation 18s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .social-items {
@@ -33,6 +48,7 @@ h2 {
   transition: all 0.5s;
   box-shadow: 0 0 2px #00000073;
   border-radius: 5px;
+  background-color: white;
 }
 
 .social-items:hover {
