--- a/travel web design/assets/css/styles.css
+++ b/travel web design/assets/css/styles.css
@@ -29,5 +29,48 @@ section {
 }
 
 .container {
-  max-width: 1500px;
+  max-width: 1100px;
+}
+
+.navbar {
+  background-color: wheat;
+}
+
+.navbar .nav-wrapper {
+  background-color: violet;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-wrapper .logo {
+  font-size: 2.8rem;
+  font-family: var(--heading-font);
+  font-weight: 600;
+  color: var(--main-color);
+}
+
+.nav-wrapper .logo span {
+  font-size: 1.8rem;
+  color: var(--second-color);
+}
+
+.nav-wrapper .menu-wrapper {
+  display: flex;
+  gap: 50px;
+  background-color: white;
+}
+
+.nav-wrapper .menu-wrapper .menu {
+  display: flex;
+  gap: 50px;
+  background-color: lime;
+}
+
+.menu-wrapper .menu .menu-link {
+  font-size: 1.25rem;
+  color: var(--main-color);
+  font-family: var(--heading-font);
+  font-weight: 500;
 }
