--- a/New/Blog Post/app.css
+++ b/New/Blog Post/app.css
@@ -34,3 +34,30 @@ h6 {
 .info span {
   color: #e95400;
 }
+
+.headline {
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0px;
+  margin: 40px 0;
+}
+
+h2 {
+  font-size: 50px;
+  font-weight: 500;
+  letter-spacing: -0.5px;
+}
+
+.quote {
+  font-style: italic;
+  font-size: 14px;
+  border-left: 2px solid #e95400;
+  padding-left: 16px;
+  margin: 32px 0 32px 32px;
+}
+
+.quote cite {
+  display: block;
+  font-weight: bold;
+  margin-left: 20px;
+}
