--- a/New/Blog Post/app.css
+++ b/New/Blog Post/app.css
@@ -15,12 +15,53 @@ h4,
 h5,
 h6 {
   font-family: Bitter, serif;
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: -1.5px;
+}
+
+h2 {
+  font-size: 50px;
+  letter-spacing: -0.5px;
+}
+
+h3 {
+  font-size: 38px;
+  letter-spacing: 0px;
+}
+
+h4 {
+  font-size: 30px;
+  letter-spacing: 0.25px;
+}
+
+h5 {
+  font-size: 24px;
+  letter-spacing: 0.25px;
+}
+
+h6 {
+  font-size: 20px;
+  letter-spacing: 0.25px;
+}
+
+code {
+  color: #e95400;
+  font-weight: bold;
 }
 
 .content {
   max-width: 900px;
   margin: 0 auto;
   padding: 32px;
+}
+
+.content h3 {
+  text-transform: capitalize;
 }
 
 .info {
@@ -40,12 +81,7 @@ h6 {
   font-weight: 500;
   letter-spacing: 0px;
   margin: 40px 0;
-}
-
-h2 {
-  font-size: 50px;
-  font-weight: 500;
-  letter-spacing: -0.5px;
+  font-size: 18px;
 }
 
 .quote {
