--- a/New/Blog Post/app.css
+++ b/New/Blog Post/app.css
@@ -22,6 +22,7 @@ h1 {
   font-size: 80px;
   font-weight: 400;
   letter-spacing: -1.5px;
+  margin: 0;
 }
 
 h2 {
@@ -52,6 +53,30 @@ h6 {
 code {
   color: #e95400;
   font-weight: bold;
+}
+
+.hero {
+  background-color: #863ae8;
+  height: 100vh;
+  color: white;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero h1,
+.hero p {
+  width: 75%;
+  max-width: 900px;
+  margin: 16px 0;
+}
+
+.hero hr {
+  width: 50%;
+  margin: 32px 0;
 }
 
 .content {
@@ -96,4 +121,31 @@ code {
   display: block;
   font-weight: bold;
   margin-left: 20px;
+}
+
+footer {
+  background-color: #863ae8;
+}
+
+footer ul {
+  list-style: none;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 900px;
+  text-align: center;
+  padding: 28px 0;
+}
+
+footer ul li {
+  display: inline;
+  padding: 0 16px;
+}
+
+footer li a {
+  text-decoration: none;
+  color: white;
+}
+
+footer li a:hover {
+  text-decoration: underline;
 }
