--- a/New/Hazel CV/style.css
+++ b/New/Hazel CV/style.css
@@ -114,3 +114,54 @@ body {
 .blog-posts p {
   margin: 8px 0;
 }
+
+.events-section {
+  background-color: #fdf0e6;
+  padding: 64px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+.events-content {
+  padding: 0 15%;
+}
+
+.events-card {
+  width: 50%;
+  float: left;
+  margin-top: 24px;
+}
+
+.events-card p {
+  margin: 8px 0;
+}
+
+.event-title {
+  font-size: 1.5rem;
+}
+
+.event-location {
+  font-size: 1rem;
+}
+
+.events-card .event-date {
+  font-size: 0.9rem;
+  color: grey;
+  margin-bottom: 32px;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 64px;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+footer img {
+  width: 2rem;
+  height: 2rem;
+  margin: 0 8px;
+}
