--- a/New/Cost Estimator/index.css
+++ b/New/Cost Estimator/index.css
@@ -18,4 +18,32 @@ h1 {
   background-color: white;
   width: 100%;
   max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.tabs {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(200, 175, 255);
+  margin: 0 0 32px 0;
+}
+
+.tabs p {
+  padding: 16px;
+}
+
+.tabs p:hover {
+  color: rgb(83, 49, 156);
+  cursor: pointer;
+}
+
+.tabs p.active {
+  color: rgb(83, 49, 156);
 }
