--- a/New/Grid/index.css
+++ b/New/Grid/index.css
@@ -4,6 +4,51 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.container {
+  max-width: 90%;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 64px 0;
+}
+.navbar .left {
+  font-size: 32px;
+  font-weight: bold;
+}
+.navbar .right {
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar .right a {
+  text-decoration: none;
+  color: black;
+}
+.navbar .right a:hover {
+  text-decoration: underline;
+}
+
+.navbar .right img {
+  width: 24px;
+  height: 24px;
+}
+
+.navbar .bar {
+  background-color: black;
+  height: 4px;
+  width: 36px;
+  margin: 3px;
+  border-radius: 10px;
+}
+
+.navbar .hamburger {
+  display: none;
+}
+
 .project-grid {
   display: grid;
   grid-template-areas:
@@ -16,8 +61,6 @@ body {
     'foam foam dimensional';
   grid-gap: 16px;
   width: 100%;
-  max-width: 90%;
-  margin: 0 auto;
 }
 
 #eth {
@@ -86,7 +129,15 @@ body {
   color: white;
 }
 
+.footer {
+  text-align: center;
+  padding: 64px;
+}
+
 @media only screen and (max-width: 1100px) {
+  .container {
+    max-width: 100%;
+  }
   .project-grid {
     max-width: 100%;
     grid-template-areas:
@@ -101,6 +152,32 @@ body {
 
 @media only screen and (max-width: 768px) {
   .project-grid {
+    margin-top: 100px;
+  }
+  .navbar {
+    padding: 16px 24px;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: white;
+    width: 100%;
+  }
+  .navbar .right {
+    display: none;
+  }
+  .navbar .hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer {
+    font-size: 14px;
+    padding: 32px;
+  }
+  .project-grid {
     grid-template-areas:
       'eth eth'
       'alphabet alphabet'
@@ -113,5 +190,43 @@ body {
   }
   .project .overlay {
     font-size: 24px;
+  }
+}
+
+.hamburger .bar:nth-child(1) {
+  animation: flipBar1 1s infinite;
+}
+.hamburger .bar:nth-child(2) {
+  animation: fadeBar2 1s infinite;
+}
+.hamburger .bar:nth-child(3) {
+  animation: flipBar3 1s infinite;
+}
+@keyframes flipBar1 {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(45deg) translate(4px, 10px);
+  }
+}
+
+@keyframes fadeBar2 {
+  from {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+  to {
+    transform: scaleX(0);
+    opacity: 0;
+  }
+}
+
+@keyframes flipBar3 {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(-45deg) translate(4px, -10px);
   }
 }
