Making Hamburger Button Work

--- a/New/Grid/index.css
+++ b/New/Grid/index.css
@@ -37,7 +37,9 @@ body {
   height: 24px;
 }
 
-.navbar .bar {
+.bar1,
+.bar2,
+.bar3 {
   background-color: black;
   height: 4px;
   width: 36px;
@@ -172,6 +174,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
   }
   .footer {
     font-size: 14px;
@@ -193,15 +196,19 @@ body {
   }
 }
 
-.hamburger .bar:nth-child(1) {
-  animation: flipBar1 1s infinite;
+.animateBar1 {
+  animation: flipBar1 1s;
+  animation-fill-mode: forwards;
 }
-.hamburger .bar:nth-child(2) {
-  animation: fadeBar2 1s infinite;
+.animateBar2 {
+  animation: fadeBar2 1s;
+  animation-fill-mode: forwards;
 }
-.hamburger .bar:nth-child(3) {
-  animation: flipBar3 1s infinite;
+.animateBar3 {
+  animation: flipBar3 1s;
+  animation-fill-mode: forwards;
 }
+
 @keyframes flipBar1 {
   from {
     transform: rotate(0);
