--- a/New/Swipe/index.css
+++ b/New/Swipe/index.css
@@ -1,9 +1,19 @@
+/** @format */
+
 :root {
   --text-dark: #000;
   --text-light: #fff;
   --text-grey: #adbdcc;
-  --body-font: "Roboto", sans-serif;
-  --heading-font: "Anek Telugu", sans-serif;
+  --body-font: 'Roboto', sans-serif;
+  --heading-font: 'Anek Telugu', sans-serif;
+  --h1-size: 94px;
+  --h1-height: 108px;
+  --h2-size: 50px;
+  --h2-height: 75px
+  --h3-size: 40px;
+  --h4-size: 32px;
+  --h5-size: 28px;
+  --h6-size: 22px;
 }
 
 h1 {
