--- a/New/Swipe/index.css
+++ b/New/Swipe/index.css
@@ -1,4 +1,6 @@
+/* VARIABLES */
 :root {
+  /* TEXT VARIABLES */
   --text-dark: #000;
   --text-light: #fff;
   --text-grey: #adbdcc;
@@ -19,14 +21,14 @@
   --secondary-text-size: 14px;
   --secondary-text-height: 18px;
   --button-size: 16px;
-  /* SPACING */
+
+  /* SPACING VARIABLES */
   --spacing-sm: 8px;
   --spacing-md: 16px;
   --spacing-lg: 32px;
   --spacing-xl: 64px;
-
   --standard-width: 1144px;
-
+  /* COLOR VARIABLES */
   --purple-1: #6962f7;
   --purple-2: #7000ff;
   --blue-1: #00d4ff;
@@ -35,6 +37,7 @@
   --bg-white: #fff;
   --bg-light: #f7f9fc;
 
+  --standard-border-radius: 20px;
   --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
   --primary-gradient: linear-gradient(
     101.33deg,
@@ -45,10 +48,18 @@
   );
 }
 
+/* GENERAL ELEMENT STYLES */
+
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--body-font);
   color: var(--text-dark);
-  width: 100%;
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
@@ -129,6 +140,7 @@ p {
   font-weight: 400;
   margin: var(--spacing-md) 0;
 }
+
 /* Layout Styles  */
 .section-container {
   width: 100%;
@@ -202,13 +214,13 @@ p {
   color: var(--text-grey);
   letter-spacing: 0.25px;
 }
-
+/* BUTTON STYLES */
 .primary-button {
   font-family: var(--body-font);
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: var(--primary-accent);
   color: var(--text-light);
@@ -225,7 +237,7 @@ p {
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: transparent;
   color: var(--primary-accent);
@@ -289,7 +301,7 @@ p {
   display: none;
 }
 
-/* ANIMATED GRADIENT  */
+/* ANIMATED GRADIENT HERO BACKGROUND  */
 
 #gradient-canvas {
   width: 200%;
@@ -307,16 +319,6 @@ p {
 
 /* HERO STYLES */
 
-.button-container {
-  display: flex;
-  margin: var(--spacing-md) 0;
-}
-
-.button-container button:nth-of-type(2) {
-  margin: 0 0 0 var(--spacing-md);
-  color: var(--purple-2);
-}
-
 .hero {
   width: 100%;
   display: flex;
@@ -325,6 +327,16 @@ p {
 
 .hero p {
   max-width: 480px;
+}
+
+.button-container {
+  display: flex;
+  margin: var(--spacing-md) 0;
+}
+
+.button-container button:nth-of-type(2) {
+  margin: 0 0 0 var(--spacing-md);
+  color: var(--purple-2);
 }
 
 .hero .hero-phone-container {
@@ -356,6 +368,7 @@ p {
   height: 60px;
   place-self: center;
 }
+
 /* UNIFIED PLATFORM SECTION */
 
 .unified-platform-section {
@@ -380,7 +393,6 @@ p {
 }
 
 /* GRAPHIC GRID SECTION */
-
 .graphic-section {
   width: 100%;
   display: flex;
@@ -401,28 +413,29 @@ p {
   grid-area: card;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 #slack-invoice {
   grid-area: slack;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 #phone {
   grid-area: phone;
   width: 100%;
-  box-shadow: var(--standard-box-shadow);
 }
 #dash {
   grid-area: dash;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 /* INTEGRATIONS SEECTION STYLES */
 .integrations-section {
   color: var(--text-light);
-  /* background-color: var(--primary-accent); */
   width: 100%;
   display: flex;
   justify-content: center;
@@ -459,8 +472,13 @@ p {
   color: var(--primary-accent);
   margin: var(--spacing-md) 0 0 0;
 }
+
 .integrations-section .primary-button:hover {
   background-color: var(--bg-white);
+}
+
+.integrations-section .secondary-button {
+  color: var(--blue-1);
 }
 
 .integrations-section .card-container {
@@ -472,19 +490,15 @@ p {
   width: 50%;
 }
 
-.integrations-section .secondary-button {
-  color: var(--blue-1);
-}
-
 #api-code {
   max-width: 470px;
   margin: 0 0 var(--spacing-md) 0;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 #terminal-code {
   max-width: 470px;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 /* WHY SWIPE SECTION */
@@ -563,6 +577,7 @@ p {
   position: absolute;
   top: 10%;
 }
+
 /* VIRTUAL EVENTS SECTION */
 .virtual-events-section {
   display: flex;
@@ -597,7 +612,7 @@ p {
   width: 540px;
   height: 446px;
   box-shadow: var(--standard-box-shadow);
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   overflow: hidden;
 }
 
@@ -705,13 +720,13 @@ p {
   padding: var(--spacing-xl) 0;
 }
 
+.footer .section-container {
+  display: flex;
+}
+
 #footer-logo {
   max-width: 108px;
   margin: 0 0 var(--spacing-md) 0;
-}
-
-.footer .section-container {
-  display: flex;
 }
 
 .footer .col {
@@ -752,28 +767,39 @@ p {
   font-weight: 700;
 }
 
+/* CUSTOM BREAKPOINT */
 @media only screen and (max-width: 1144px) {
-  .section-container {
-    padding: 0 var(--spacing-md);
-  }
-
   :root {
     --h1-size: 80px;
     --h1-height: 85px;
   }
+  /* GENERAL LAYOUT */
+  .section-container {
+    padding: 0 var(--spacing-md);
+  }
+  /* HERO SECTION */
   .hero-phone {
     height: 550px;
     transform: translateY(-60px);
   }
-
   .hero .col-left {
     width: 60%;
   }
   .hero .col-right {
     width: 40%;
   }
+
+  /* PARTNERS GRID */
+
+  .partners-section {
+    margin: -60px 0 0 0;
+  }
+  .partners-grid {
+    margin: 0 0 var(--spacing-xl) 0;
+  }
 }
 
+/* CUSTOM BREAKPOINT (850px) */
 @media only screen and (max-width: 850px) {
   :root {
     --h1-size: 70px;
@@ -789,17 +815,15 @@ p {
     height: auto;
   }
   /* INTEGRATIONS SECTION */
-
   .integrations-section .col-left {
     width: 60%;
   }
-
   .integrations-section .col-right {
     width: 40%;
   }
 }
 
-/* TABLET SIZE */
+/* TABLET SIZE STYLES */
 @media only screen and (max-width: 768px) {
   :root {
     --h1-size: 58px;
@@ -824,7 +848,7 @@ p {
     width: 50px;
     height: 30px;
     background-color: rgba(250, 250, 250, 0.25);
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -836,12 +860,6 @@ p {
     height: 2px;
     background-color: var(--bg-white);
     margin: 1px 0;
-  }
-
-  /* HERO STYLES */
-
-  .navbar {
-    margin: 0;
   }
 
   /* HERO STYLES */
@@ -868,8 +886,13 @@ p {
     height: 450px;
     transform: translateX(32px);
   }
-  /* UNIFIED PLATFORM */
 
+  /* PARTNERS GRID */
+  .partners-section {
+    margin: -20px 0 0 0;
+  }
+
+  /* UNIFIED PLATFORM SECTION*/
   .unified-platform-section h2 {
     width: 100%;
   }
@@ -883,18 +906,20 @@ p {
     width: 100%;
   }
 
-  /* WHY SWIPE */
+  /* WHY SWIPE SECTION */
+  .why-swipe-section {
+    padding: var(--spacing-md) 0 var(--spacing-xl) 0;
+  }
+
   .why-swipe-section .card-container {
     flex-wrap: wrap;
   }
   .why-swipe-section .card-container .card {
     width: 50%;
-    /* margin: 0; */
     margin: var(--spacing-md) 0;
   }
 
-  /* GLOBAL SCALE SECTION */
-
+  /* GLOBAL SECTION */
   .global-section .card-container {
     flex-wrap: wrap;
     margin: var(--spacing-xl) 0;
@@ -904,8 +929,8 @@ p {
     width: 50%;
     margin: var(--spacing-md) 0;
   }
-  /* GETTING STARTED SECTION */
 
+  /* GETTING STARTED SECTION */
   .getting-started-section .two-column {
     align-items: center;
   }
@@ -918,8 +943,9 @@ p {
   }
 }
 
-/* MOBILE SIZE */
+/* MOBILE SIZE BREAKPOINT */
 @media only screen and (max-width: 550px) {
+  /* GENERAL STYLES */
   :root {
     --h1-size: 58px;
     --h1-height: 65px;
@@ -938,6 +964,7 @@ p {
     width: 100%;
     padding: 0;
   }
+
   /* NAVBAR STYLES */
   .navbar {
     margin: 0 0 var(--spacing-lg) 0;
@@ -955,16 +982,38 @@ p {
     display: none;
   }
 
+  /* PARTNERS GRID SECTION */
+
+  .partners-section {
+    margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
+  }
   .partners-grid {
     grid-template-columns: 1fr 1fr;
   }
 
+  /* UNIFIED PLATFORM */
+  .unified-platform-section {
+    padding: var(--spacing-md) 0;
+  }
+
   /* INTEGRATIONS SECTION */
+  .integrations-section {
+    padding: var(--spacing-lg) 0;
+  }
+
+  .integrations-section::before {
+    height: 900px;
+  }
+
   .integrations-section .col-right {
     display: none;
   }
 
-  /* WHY SWIPE */
+  /* WHY SWIPE SECTION */
+  .why-swipe-section {
+    padding: var(--spacing-xl) 0 var(--spacing-md) 0;
+  }
+
   .why-swipe-section .card-container .card {
     width: 100%;
     margin: var(--spacing-sm) 0;
@@ -975,6 +1024,13 @@ p {
   }
 
   /* GLOBAL SECTION */
+  .global-section {
+    padding: var(--spacing-xl) 0 0 0;
+  }
+
+  .global-section .card-container {
+    margin: var(--spacing-md) 0;
+  }
 
   .global-section .card-container .card {
     width: 100%;
@@ -986,6 +1042,9 @@ p {
   }
 
   /* VIRTUAL EVENTS SECTION */
+  .virtual-events-section {
+    padding: 0;
+  }
   .virtual-events-section .swipe-sessions-card {
     margin: var(--spacing-lg) 0;
     width: 100%;
@@ -1003,6 +1062,12 @@ p {
     width: 300px;
   }
 
+  /* GETTING STARTED SECTION*/
+  .getting-started-section {
+    padding: var(--spacing-md) 0;
+  }
+
+  /* FOOTER STYLES */
   .footer .section-container {
     flex-wrap: wrap;
   }
@@ -1023,11 +1088,4 @@ p {
   .footer .icon-link img {
     width: 18px;
   }
-}
-
-html,
-body {
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
 }
